--- a/report/main.tex
+++ b/report/main.tex
@@ -115,6 +115,7 @@
 \chapterauthor{Sjölund, Johannes (no one)}
 \input{software_design.tex}
 \input{android.tex}
+\input{software_results.tex}
 
 \clearpage
 \section{Inertial Navigation System and Kalman filter}
