--- a/report/references.tex
+++ b/report/references.tex
@@ -30,7 +30,7 @@
   \url{https://www.movable-type.co.uk/scripts/latlong.html}
 \bibitem{rhumb-line}
   \url{https://en.wikipedia.org/wiki/Rhumb_line}
-\bibitem{equitriangular}
+\bibitem{equirectangular}
   \url{https://en.wikipedia.org/wiki/Equirectangular_projection}
 \bibitem{haversine}
   \url{https://en.wikipedia.org/wiki/Haversine_formula}
@@ -46,6 +46,15 @@
   \url{https://developer.android.com/reference/android/app/Activity.html}
 \bibitem{uml}
   \url{https://en.wikipedia.org/wiki/Unified_Modeling_Language}
+\bibitem{gl}
+  \url{https://developer.android.com/reference/android/opengl/GLSurfaceView.html}
+\bibitem{texttospeech}
+  \url{https://developer.android.com/reference/android/speech/tts/TextToSpeech.html}
+\bibitem{utter}
+  \url{https://developer.android.com/reference/android/speech/tts/UtteranceProgressListener.html}
+\bibitem{gmaps}
+  \url{https://developers.google.com/maps/}
+
 \bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
 \textit{Proceedings of the}. IEEE, 85(1):6 –23, jan 1997
