--- a/report/kf.tex
+++ b/report/kf.tex
@@ -1,11 +1,11 @@
 
 \subsection*{Sensor theory}
-Sensor fusion can be observed everywhere e.g., living animals uses all of its senses to survive daily, an animal cannot hunt using its eyes only, it has to combine its sense of smell, eyes, and hearing to hunt the pray\cite{animal}. Sensor fusion theory is not only found in the living species it is found in cars, planes, computers and so on and this to enhance performance and accuracy \cite{animal}. In this project a sensor fusion will be designed to enhance the accuracy of the dinghy's position and velocity. The fusion will be between a global positioning system, GPS and an Inertial Navigation System, INS. The INS contains on a low priced, Inertial Measurement Unit, IMU.\\ 
-The GPS's accuracy is not uniform since there might be building reflections, atmospherics delays or clock bias errors \cite{boken}. Using the only information provided by an SINS is not sufficient either since the IMU sensor will drift after time, but using the information provided by the INS for short time intervals will give more accurate results.  
+Sensor fusion can be observed everywhere e.g., living animals uses all of its senses to survive daily, an animal cannot hunt using its eyes only, it has to combine its sense of smell, eyes, and hearing to hunt the pray\cite{animal}. Sensor fusion theory is not only found in the living species it is found in cars, planes, computers and so on, this to enhance performance and accuracy. In this project, a sensor fusion will be designed to enhance the accuracy of the dinghy's position and velocity. The fusion will be a global positioning system, GPS and an Inertial Navigation System, INS. The INS contains a low priced, Inertial Measurement Unit, IMU.\\ 
+The GPS's accuracy is not uniform since there might be building reflections, atmospherics delays or clock bias errors \cite{boken}. Using the only information provided by a Strapdown Inertial Navigation System, SINS is not sufficient either since the IMU sensor will drift after time, but using the information provided by the INS for short time intervals will give more accurate results.  
 
 \subsection{Inertial Navigation System}
-In navigation there exist different techniques on how to navigate using an IMU, a typical technique is using a Strapdown Inertial Navigation System, SINS. A SINS consists of an IMU which is mounted on the dinghy so it measures the acceleration and rotational rate that the dinghy encounters.
-The concepts of inertial navigation is to determine the position and velocity of the dinghy from a known starting point, using only measurements from the IMU. The IMU, in this case, consists of a three-axis gyroscope, a three-axis accelerometer, and a three-axis magnetometer. \\
+In navigation there exist different techniques on how to navigate using an IMU, a typical technique is using a SINS. A SINS consists of an IMU which is mounted on the dinghy so it measures the acceleration and rotational rate that the dinghy encounters.
+The concepts of inertial navigation are to determine the position and velocity of the dinghy from a known starting point, using only measurements from the IMU. The IMU, in this case, consists of a three-axis gyroscope, a three-axis accelerometer, and a three-axis magnetometer. \\
 Measurement from the gyroscope is to determine the angular motion of the dinghy, from that its heading relative to a reference frame can be derived.
 By measuring specific forces acting on the dinghy using the accelerometer, then resolve the specific force measurements into the reference frame using the knowledge derived from the information provided by the gyroscope. 
 Integrate the resolved specific force measurements to obtain its velocity and position. \cite{non-linear} 
